--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@laylazi/bootstrap-rtl": "^4.6.0-1",
-    "@popperjs/core": "^2.9.2",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^4.6.0",
     "css-loader": "^5.2.6",
+    "expose-loader": "^3.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
